--- a/Jt76.Ui/ClientApp/app/components/app.component.html
+++ b/Jt76.Ui/ClientApp/app/components/app.component.html
@@ -62,7 +62,7 @@
                     Loaded!
                 </h1>
                 <p>
-                    QUICK APPLICATION SYSTEM - <span class="appName" style="font-style:italic">quick</span><span class="appName">App</span> &copy; <a href="http://www.ebenmonney.com">WWW.EBENMONNEY.COM</a>
+                    QUICK APPLICATION SYSTEM - <span class="appName" style="font-style:italic">quick</span><span class="appName">App</span> &copy; <a href="https://github.com/JeremyTurner1976">GitHub</a>
                 </p>
 
             </div>
@@ -79,8 +79,8 @@
                         <div class="app-component vcenter_text center-block">
                             <p class="text-center text-muted">
                                 <span class="appName" style="font-style:italic">quick</span><span class="appName">App</span> &copy; {{getYear()}}
-                                <a href="http://www.ebenmonney.com" target="_blank">www.ebenmonney.com</a>
-                                <!--<span class="small display-none">- Powered by <a href="http://ebenmonney.com/quickapp" target="_blank"><span class="appName" style="font-style:italic">quick</span><span class="appName">App</span></a></span>-->
+                                <a href="https://github.com/JeremyTurner1976" target="_blank">GitHub</a>
+                                <span class="small display-none">- Powered by <a href="http://ebenmonney.com/quickapp" target="_blank"><span class="appName" style="font-style:italic">quick</span><span class="appName">App</span></a></span>
                             </p>
                         </div>
                     </footer>
