--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import '../node_modules/bootstrap/scss/bootstrap';
 @import '~@angular/material/theming';
 
 // always include only once per project
@@ -19,5 +19,5 @@
 }
 
 .light-theme {
-  @include angular-material-theme($app-light-theme);
-}
+    @include angular-material-theme($app-light-theme);
+  }
