--- a/Jt76.Ui/ClientApp/src/app/modules/admin/admin.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/admin.component.html
@@ -4,12 +4,12 @@
 
 <ul>
   <li>
-    <a [routerLink]="['/errors']">
+    <a mat-button [routerLink]="['/errors']">
       Error List
     </a>
   </li>
   <li>
-    <a [routerLink]="['/error/1']">
+    <a mat-button [routerLink]="['/error/1']">
       Error
     </a>
   </li>
