--- a/Jt76.Ui/ClientApp/src/app/modules/weather/weather.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/weather/weather.component.html
@@ -4,7 +4,7 @@
 
 <ul>
   <li>
-    <a [routerLink]="['/weather-panel']">
+    <a mat-button [routerLink]="['/weather-panel']">
       Today's Weather
     </a>
   </li>
