Added log files component

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/admin.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/admin.component.html
@@ -13,4 +13,9 @@
       Error
     </a>
   </li>
+  <li>
+    <a mat-button [routerLink]="['/logFiles']">
+      Log Files
+    </a>
+  </li>
 </ul>
