--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
@@ -1,13 +1,15 @@
-<p>
-  errors works!
-</p>
+<div>
+  <p>
+    errors works!
+  </p>
 
-<ul>
-  <li>
-    <a mat-button [routerLink]="['/error/1']">
-      Error
-    </a>
-  </li>
-</ul>
+  <ul>
+    <li>
+      <a mat-button [routerLink]="['/admin/error/1']">
+        Error
+      </a>
+    </li>
+  </ul>
+</div>
 
 
