Some more styling changes for the admin module, ready for content

--- a/Jt76.Ui/ClientApp/src/app/app.component.html
+++ b/Jt76.Ui/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div [class]="colorTheme()">
 
-  <mat-toolbar color="primary" class="header">
+  <mat-toolbar color="primary"
+               class="header">
     
     <button mat-button
             routerLink="dashboard"
