--- a/Jt76.Ui/ClientApp/src/app/modules/admin/web-api/web-api.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/web-api/web-api.component.html
@@ -1,1 +1,1 @@
-<iframe src="http://localhost:58107/swagger" style="background: #EEEEEE"></iframe>
+<iframe src="http://localhost:58107/swagger"></iframe>
