--- a/Jt76.Ui/ClientApp/src/app/modules/admin/web-api/web-api.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/web-api/web-api.component.scss
@@ -1,9 +1,7 @@
 iframe {
-  position: fixed;
-  top: 64px;
-  left: 0px;
   display: block;
   border: none;
-  height: calc(100vh - 128px);
-  width: 100%;
+  height: calc(100vh - 256px);
+  width: calc(100% - 10px);
+  padding: 10px 0px 10px 10px;
 }
