Brought in api routing and errors displays

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
@@ -1,3 +1,11 @@
-<p>
-  error works!
-</p>
+{{error.createdDate}}
+<br />
+{{error.createdBy}}
+<br />
+{{error.errorLevel}}
+<br />
+{{error.createdDate}}
+<br />
+{{error.additionalInformation}}
+<br />
+{{error.stackTrace}}
