--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -33,6 +33,12 @@
   font-weight: bold;
 }
 
+.expanded-mat-line {
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
+}
+
 .list-item {
   border: 1px solid black;
 }
+
