Added client side exception handling app wide, and DB storage for both client exception types

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/web-api/web-api.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/web-api/web-api.component.scss
@@ -2,6 +2,5 @@ iframe {
   display: block;
   border: none;
   height: calc(100vh - 256px);
-  width: calc(100% - 10px);
-  padding: 10px 0px 10px 10px;
+  width: calc(100%);
 }
