Implemented quick standup of file loads for the DB project error files

--- a/Jt76.Ui/ClientApp/src/app/app.component.html
+++ b/Jt76.Ui/ClientApp/src/app/app.component.html
@@ -6,7 +6,7 @@
     <button mat-button
             routerLink="dashboard"
             class="nav-button">
-      {{title}}
+      <mat-icon>home</mat-icon> {{title}}
     </button>
 
     <span class="toolbar-spacer">
