--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -33,6 +33,10 @@
   font-weight: bold;
 }
 
+ellipsis {
+  text-overflow: ellipsis;
+}
+
 .expanded-mat-line {
   padding-top: 15px !important;
   padding-bottom: 15px !important;
