--- a/Jt76.Ui/ClientApp/src/themes/dark-theme.scss
+++ b/Jt76.Ui/ClientApp/src/themes/dark-theme.scss
@@ -1,5 +1,5 @@
 $app-dark-primary: mat-palette($mat-grey, 900, 500, 900);
-$app-dark-accent: mat-palette($mat-green, A200);
+$app-dark-accent: mat-palette($mat-grey, 500);
 $app-dark-warn: mat-palette($mat-red, A200);
 
 $app-dark-theme: mat-dark-theme( $app-dark-primary, $app-dark-accent, $app-dark-warn );
