Finalized log files admin component

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
@@ -16,8 +16,8 @@
           {{item.fileName}}
         </mat-panel-title>
         <mat-panel-description>
-          DB Error Logs
-          <mat-icon>ant-book</mat-icon>
+          {{item.applicationName}} Error Logs
+          <mat-icon>content_copy</mat-icon>
         </mat-panel-description>
       </mat-expansion-panel-header>
 
