--- a/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
@@ -4,7 +4,7 @@
     Log Files
   </p>
 
-  <mat-accordion class="example-headers-align"
+  <mat-accordion class="accordion-headers-align"
                  *ngFor="let item of logFiles; let i = index">
     <mat-expansion-panel [expanded]="step === i"
                          (opened)="setStep(i)"
@@ -21,7 +21,8 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
 
-      <div (click)="hideInfo();">
+      <div (click)="hideInfo();"
+           class="list-item file-content">
         <div *ngFor="let line of fileLines"
              class="ellipsis">
           {{line}}<br/>
@@ -29,15 +30,20 @@
       </div>
 
       <mat-action-row>
-        <button mat-button color="accent"
+        <button mat-button
+                color="accent"
                 (click)="detailedLogFileClicked(item)">Detailed</button>
-        <button mat-button color="warn"
+        <button mat-button
+                color="warn"
                 (click)="firstStep()">First</button>
-        <button mat-button color="warn"
+        <button mat-button
+                color="warn"
                 (click)="prevStep()">Previous</button>
-        <button mat-button color="warn"
+        <button mat-button
+                color="warn"
                 (click)="nextStep()">Next</button>
-        <button mat-button color="warn"
+        <button mat-button
+                color="warn"
                 (click)="lastStep()">Last</button>
       </mat-action-row>
 
