added local storage and an errors service

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
@@ -1,7 +1,19 @@
 <mat-card>
-      
+
+  <mat-card-title>
+    Error
+  </mat-card-title>
+
   <mat-card-content>
-    <div [innerHTML]="error.html" class="error-details"></div>
+
+    {{error.message}}
+    {{error.errorLevel}}
+    {{error.source}}
+    {{error.additionalInformation}}
+    {{error.stackTrace}}
+    {{error.createdBy}}
+    {{error.createdDate}}
+
   </mat-card-content>
 
   <mat-card-actions>
