--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
@@ -2,6 +2,18 @@
 
   <p class="component-title">
     Errors
+    <span class="action-button">
+      <a mat-raised-button
+         color="warning"
+         (click)="clearAll()">
+        Clear All
+      </a>
+      <a mat-raised-button
+         color="primary"
+         (click)="refresh()">
+        Refresh
+      </a>
+    </span>
   </p>
 
   <mat-nav-list>
