--- a/Jt76.Ui/ClientApp/src/app/shared/components/alert/alert.component.html
+++ b/Jt76.Ui/ClientApp/src/app/shared/components/alert/alert.component.html
@@ -1,7 +1,9 @@
 <div class="alert {{alertClass}}">
-  <strong>{{message}}</strong>
+  {{message}}
   <div *ngIf="additionalInformation.length">
     <hr />
-    {{additionalInformation}}
+    <div class="alert-info">
+      {{additionalInformation}}
+    </div>
   </div>
 </div>
