--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -23,14 +23,8 @@
 }
 
 // global styles
-.app-notification {
-  z-index: 100000;
-  border-radius: .5em !important;
-  background: whitesmoke;
-  color: #37474F;
-  border: 1px solid #37474F;
-  font-weight: bolder;
-  text-align: center;
+.action-button {
+  float: right;
 }
 
 .component-title {
