--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -28,7 +28,13 @@
 }
 
 .component-title {
-  font-size: 1.25em !important;
+  font-size: 1.3em !important;
+  font-weight: bolder;
+}
+
+.component-detail {
+  margin-left: 15px;
+  font-size: 1.1em !important;
   font-weight: bold;
 }
 
@@ -45,3 +51,9 @@ ellipsis {
   border: 1px solid black;
 }
 
+.page-title {
+  font-size: 1.2em !important;
+  font-weight: bolder;
+  margin-bottom: 6px !important;
+  padding-top: 6px !important;
+}
